@@ -3,6 +3,7 @@ Copyright (c) 2005-2018 Alon Bar-Lev <alon.barlev@gmail.com>
 
 ????-??-?? - Version 1.26
 
+ * core: build with threading disabled
 
 2018-08-04 - Version 1.25
 
